fixed header on mobile to column

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ ul li {
 }
 @media only screen and (max-width: 768px) {
     header {
-        flex-direction: row;
+        flex-direction: column;
         background-color: var(--baby);
         display: flex;
         height: 100px;
@@ -257,7 +257,7 @@ ul li {
         
     }
     nav a {
-        flex-direction: row;
+        flex-direction: column;
         color: var(--gry);
         display: inline-flex;
         order: 2;
